WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221410
[GTK] clang warnings
https://bugs.webkit.org/show_bug.cgi?id=221410
Summary
[GTK] clang warnings
Philippe Normand
Reported
2021-02-04 09:02:19 PST
[4882/5293] Building CXX object Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/unified-sources/UnifiedSource-88d1702b-3.cpp.o In file included from DerivedSources/WebKit/unified-sources/UnifiedSource-88d1702b-3.cpp:1: ../../Source/WebKit/UIProcess/SpeechRecognitionServer.cpp:162:129: warning: format specifies type 'unsigned long long' but the argument has type 'uint64_t' (aka 'unsigned long') [-Wformat] WTFLogAlways("[%p]SpeechRecognitionServer::sendUpdate update.type[%d], update.clientIdentifier[%llu]", this, update.type(), update.clientIdentifier().toUInt64()); ~~~~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ %lu 1 warning generated. [4899/5293] Building CXX object Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/unified-sources/UnifiedSource-72468c22-2.cpp.o In file included from DerivedSources/WebKit/unified-sources/UnifiedSource-72468c22-2.cpp:8: ../../Source/WebKit/NetworkProcess/NetworkResourceLoader.cpp:378:17: warning: enumeration value 'Model' not handled in switch [-Wswitch] switch (destination) { ^ 1 warning generated. [5086/5293] Building CXX object Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/unified-sources/UnifiedSource-54928a2b-27.cpp.o In file included from DerivedSources/WebKit/unified-sources/UnifiedSource-54928a2b-27.cpp:8: ../../Source/WebKit/WebProcess/Speech/SpeechRecognitionRealtimeMediaSourceManager.cpp:160:14: warning: private field 'm_numberOfFrames' is not used [-Wunused-private-field] uint64_t m_numberOfFrames { 0 }; ^ 1 warning generated.
Attachments
Patch
(3.64 KB, patch)
2021-02-04 09:14 PST
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
Patch
(3.64 KB, patch)
2021-02-04 09:16 PST
,
Philippe Normand
aperez
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2021-02-04 09:14:58 PST
Created
attachment 419286
[details]
Patch
Philippe Normand
Comment 2
2021-02-04 09:16:10 PST
Created
attachment 419289
[details]
Patch
EWS
Comment 3
2021-02-04 12:23:16 PST
/Volumes/Data/worker/Commit-Queue/build/Source/WebKit/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
Adrian Perez
Comment 4
2021-02-04 12:37:11 PST
Comment on
attachment 419289
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=419289&action=review
> Source/WebKit/ChangeLog:5 > +
Good Guy Style Cheker™ caught this one: the “Reviewed by” line is missing; please add it before landing =}
Philippe Normand
Comment 5
2021-02-05 03:03:14 PST
Committed
r272408
: <
https://trac.webkit.org/changeset/272408
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug