[GTK] clang warnings https://bugs.webkit.org/show_bug.cgi?id=221410

Reviewed by Adrian Perez de Castro.

* NetworkProcess/NetworkResourceLoader.cpp:
(WebKit::NetworkResourceLoader::resourceLoadInfo): Remove ifdef added in r272313, the
corresponding enum value is not ifdeffed either.
* UIProcess/SpeechRecognitionServer.cpp:
(WebKit::SpeechRecognitionServer::sendUpdate): Use portable format specifier for uint64_t.
* WebProcess/Speech/SpeechRecognitionRealtimeMediaSourceManager.cpp: Ifdef member variable
currently used only on Cocoa platforms.

Canonical link: https://commits.webkit.org/233732@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272408 268f45cc-cd09-0410-ab3c-d52691b4dbfc